# easymake

./: pyproject.toml  tox.ini
docs/: requirements.txt
docs/source/: conf.py  index.rst
easymake/: __init__.py  __main__.py  helpers.py  make.py
tests/: test_easymake.py
