[tool.poetry]
name = "easymake"
version = "0.1.1"
description = ""
authors = ["Julian Ferry <julianferry94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
demjson = "^2.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
numpydoc = "^1.1.0"

[tool.poetry.scripts]
easymake = 'easymake.__main__:main'
ezmake = 'easymake.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"